# openrits

./: LICENSE  README.md  pyproject.toml
openrits/: apps.py  models.py  tests.py
