[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "openrits"
authors = [
    {name = "Jakub Kasprzak"},
]
description = "A django app for rental inventory tracking."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["rental", "inventory", "tracking"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.1",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django >= 4.1"
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/jjkasprzak/openrits.git"